--- a/users/ticket1.yaml
+++ b/users/ticket1.yaml
@@ -1,7 +1,7 @@
 ---
 - name: add users
   hosts: all 
-  user: root
+  user: ec2-user
   tasks:
   - name: add list of users
     # Your code goes here
